# OOTPISP-2023

./: .gitignore  .gitmodules  CMakeLists.txt  CppProperties.json  README.md  sonar-project.properties
.github/: pr-title-checker-config.json
.github/workflows/: build.yml  check_branch_name.yml  check_duplication.yml  duplication.yml
tasks/task_00/: readme.md
tasks/task_01/: CMakeLists.txt  README.md  readme.md
tasks/task_02/: readme.md
tasks/task_03/: README.md
tasks/task_04/: readme.md
tasks/task_05/: README.md
tasks/task_06/: readme.md
tasks/task_07/: README.md
tasks/task_08/: README.md
trunk/PO-8_210639/: README.md
trunk/PO-8_210639/src/: CMakeLists.txt
trunk/PO-8_210639/task_01/: README.md
trunk/PO-8_210639/task_01/src/: CMakeLists.txt  main.cpp  mainwindow.h  textbox.h  textbox.ui
trunk/PO-8_210639/task_02/: README.md
trunk/PO-8_210639/task_02/src/: CMakeLists.txt  main.cpp  texteditor.cpp  texteditor.h  texteditor.qrc  texteditor.ui
trunk/PO-8_210639/task_03/: README.md
trunk/PO-8_210639/task_04/: README.md
trunk/PO-8_210639/task_04/src/: CMakeLists.txt
trunk/PO-8_210639/task_05/: README.md
trunk/PO-8_210639/task_07/: README.md
trunk/PO-8_210639/task_07/src/: CMakeLists.txt  abstractFactory.cpp  builder.h  buildermain.cpp  concreteDoor.cpp  concreteDoor.h  concreteMazeFactory.cpp  concreteMazeFactory.h  concreteRoom.cpp  concreteRoom.h  door.h  ears.cpp  ears.h  eyes.cpp  eyes.h  faceDirector.cpp  faceDirector.h  goodfacebuilder.cpp  goodfacebuilder.h  hair.cpp  hair.h  mazefactory.cpp  mazefactory.h  mouth.cpp  mouth.h  nose.cpp  nose.h  room.h  smilefacebuilder.cpp  smilefacebuilder.h  uglyfacebuilder.cpp  uglyfacebuilder.h
trunk/PO-8_210639/task_08/: README.md
trunk/PO-8_210639/task_08/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
trunk/PO-8_210640/task_01/: README.md
trunk/PO-8_210640/task_02/: README.md
trunk/PO-8_210640/task_03/: README.md
trunk/PO-8_210640/task_04/: README.md
trunk/PO-8_210640/task_05/: README.md
trunk/PO-8_210640/task_07/: README.md
trunk/PO-8_210640/task_08/: README.md
trunk/PO-8_210641/task_01/: README.md
trunk/PO-8_210641/task_02/: README.md
trunk/PO-8_210641/task_03/: README.md
trunk/PO-8_210641/task_04/: README.md
trunk/PO-8_210641/task_05/: README.md
trunk/PO-8_210641/task_07/: README.md
trunk/PO-8_210641/task_08/: README.md
trunk/PO-8_210642/task_01/: README.md
trunk/PO-8_210642/task_02/: README.md
trunk/PO-8_210642/task_02/src/: CMakeLists.txt  main.cpp  notepad.cpp  notepad.h  notepad.ui
trunk/PO-8_210642/task_03/: README.md
trunk/PO-8_210642/task_03/src/: CMakeLists.txt  mainwindow.h  task01.cpp  task02.cpp  task02.h  task03.cpp  task03.h  task04.cpp  task05.cpp  task05.h  task06.cpp  task06.h
trunk/PO-8_210642/task_04/: README.md
trunk/PO-8_210642/task_04/src/: CMakeLists.txt  main.cpp  temperatureconverter.cpp  temperatureconverter.h  temperatureconverter.ui
trunk/PO-8_210642/task_05/: README.md
trunk/PO-8_210642/task_05/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
trunk/PO-8_210642/task_07/: README.md
trunk/PO-8_210642/task_07/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
trunk/PO-8_210642/task_08/: README.md
trunk/PO-8_210643/task_01/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  textreviwer.cpp  textreviwer.h
trunk/PO-8_210643/task_02/: README.md
trunk/PO-8_210643/task_04/: README.md
trunk/PO-8_210643/task_05/: README.md  lab5wpf.sln
trunk/PO-8_210643/task_06/: CMakeLists.txt  README.md
trunk/PO-8_210643/task_07/: README.md
trunk/PO-8_210643/task_08/: README.md
trunk/PO-8_210644/task_04/: README.md
trunk/PO-8_210644/task_05/: README.md
trunk/PO-8_210647/task_01/: Readme.md
trunk/PO-8_210647/task_02/: README.md
trunk/PO-8_210647/task_03/: README.md
trunk/PO-8_210647/task_04/: README.md
trunk/PO-8_210647/task_05/: README.md
trunk/PO-8_210647/task_05/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
trunk/PO-8_210647/task_07/: AbstractFactory.h  Builder.h  (+2 more)
trunk/PO-9_210651/task_08/src/: AbstractFactory.h  Builder.h  CMakeLists.txt  main.cpp
trunk/PO-9_210655/task_03/src/: CMakeLists.txt  main.cpp
trunk/PO-9_210655/task_04/src/: CMakeLists.txt  main.cpp
trunk/PO-9_210655/task_05/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
trunk/PO-9_210656/lab1/src/: CMakeLists.txt  fileviewer.cpp  fileviewer.h  main.cpp
trunk/PO-9_210656/lab2/source/: CMakeLists.txt  texteditor.cpp
trunk/PO-9_210656/lab4/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
trunk/PO-9_210656/lab5/src/: CMakeLists.txt  database.sqlite  databasewindow.cpp  databasewindow.h  databasewindow.ui  main.cpp
trunk/PO-9_210657/lab8/src/: AbstractFactory.h  Builder.h  CMakeLists.txt  main.cpp
trunk/PO-9_210661/: README.md
trunk/PO-9_210661/task_03/src/: CMakeLists.txt  main.cpp  t1.cpp  t1.h  t1.ui  t2.cpp  t2.h  t2.ui  t3.cpp  t3.h  t3.ui  t4.cpp  t4.h  t4.ui  t5.cpp  t5.h  t5.ui  t6.cpp  t6.h  t6.ui
trunk/PO-9_210661/task_05/src/: CMakeLists.txt  bd.cpp  bd.h  bd.ui  main.cpp
trunk/PO-9_210661/task_07/src/: CMakeLists.txt  l7.cpp  l7.h  l7.ui  main.cpp
trunk/PO-9_210664/task_08/src/: AbstructFactory.cpp  Builder.cpp  CMakeLists.txt  FactoryMethodWithAbstructFactory.cpp  labrab15.cpp  labrab15.h  labrab15.ui  main.cpp
trunk/PO-9_210665/task_03/src/: CMakeLists.txt  form.cpp  form.h  form.ui  form2.cpp  form2.h  form2.ui  form21.cpp  form21.h  form21.ui  form3.cpp  form3.h  form3.ui  form4.cpp  form4.h  form4.ui  form5.cpp  form5.h  form5.ui  form6.cpp  form6.h  form6.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
trunk/PO-9_210665/task_05/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
trunk/PO-9_210665/task_07/src/: AbstractFactory.h  Builder.h  CMakeLists.txt  main.cpp
trunk/PO-9_210674/task_06/: CMakeLists.txt  README.md
trunk/PO-9_210674/task_06/include/: Header.h  dllmain.cpp
trunk/PO-9_210674/task_06/src/: Source.cpp
trunk/PO-9_210674/task_06/test/: entropyTests.cpp  entropyTests.h
(+814 files in other folders)
